Fix High Contrast/Forced Colors issues (#933)
* Highlight TabGroup current tab in forced colors mode

* Highlight the current TOC item in forced colors mode

* Change Astro logo colors for highlight colors in forced colors mode

* Indicate the ThemeToggleButton boundaries and highlight current theme in forced colors mode

* Highlight the current page in forced colors mode

* Indicate aside boundaries

* Indicate brand logo boundaries

* Indicate button boundaries

* Indicate contributor image boundaries

* Indicate DeployGuide card boundaries

* Make ESLint happy

* Highlight on this page arrow

* Fix TabGroup highlighting

* Add border for focusable elements

* Change header logo for a more semantic color

* Change forced colors tab styling

--- a/public/index.css
+++ b/public/index.css
@@ -506,7 +506,16 @@ h2.heading {
 /* Highlight TOC header link matching the current scroll position */
 .current-header-link {
 	background-color: var(--theme-bg-accent);
+	/* Indicates the current heading for forced colors users in older browsers */
+	outline: 1px solid transparent;
 }
+
+@media (forced-colors: active) {
+	.current-header-link {
+		border: 1px solid CanvasText;
+	}
+}
+
 .current-header-link a {
 	color: var(--theme-text);
 }
