--- a/src/components/RightSidebar/TableOfContents.css
+++ b/src/components/RightSidebar/TableOfContents.css
@@ -77,6 +77,13 @@
 	stroke: var(--theme-accent-secondary);
 }
 
+@media (forced-colors: active) {
+  .toc-mobile-header svg {
+    fill: Highlight;
+		stroke: Highlight;
+  }
+}
+
 .toc-mobile-container ul {
 	margin-inline: var(--min-spacing-inline);
 	max-height: calc(var(--cur-viewport-height) - var(--theme-navbar-height) - var(--theme-sticky-toc-height) - 1rem);
