--- a/src/components/TabGroup/TabGroup.css
+++ b/src/components/TabGroup/TabGroup.css
@@ -2,6 +2,7 @@
 	display: flex;
 	border-bottom: 4px solid var(--theme-divider);
 }
+
 .TabGroup button,
 .TabGroup a {
 	flex: 1;
@@ -16,10 +17,27 @@
 	background-color: transparent;
 	text-decoration: none;
 }
+
 .TabGroup .active {
 	color: var(--theme-text);
 	border-bottom-color: var(--theme-accent);
 	font-weight: bold;
+}
+
+@media (forced-colors: active) {
+	.TabGroup {
+		border-bottom-color: Canvas;
+	}
+
+  .TabGroup .active {
+		color: ButtonText;
+    border-bottom-color: Highlight;
+  }
+
+	.TabGroup a, .TabGroup button {
+		color: LinkText;
+		border-bottom-color: Canvas;
+	}
 }
 
 .TabGroup.no-flex button,
